<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardCornerRadius="8dp"
    app:cardUseCompatPadding="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayoutReview"
        android:layout_width="match_parent"
        android:layout_height="288dp"
        android:padding="5dp"
        android:background="@color/grey">

        <TextView
            android:id="@+id/textViewCardReviewText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:text="@string/default_review"
            android:textColor="@color/black"
            tools:textStyle="italic"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:textAlignment="inherit" />

        <TextView
            android:id="@+id/textViewReviewAuthorName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:text="@string/default_author"
            tools:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textViewReviewDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:text="@string/default_date"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <TextView
            android:id="@+id/textViewReviewTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:text="@string/default_review_title"
            tools:textStyle="bold|italic"
            app:layout_constraintBottom_toTopOf="@+id/textViewCardReviewText"
            app:layout_constraintStart_toStartOf="parent"/>
        <TextView
            android:id="@+id/textViewDislikesLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dislike"
            android:layout_margin="16dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/textViewLikesLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/like"
            android:layout_margin="16dp"
            app:layout_constraintBottom_toTopOf="@+id/textViewDislikesLabel"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/textViewLikesCount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:text="@string/default_count"
            app:layout_constraintStart_toEndOf="@+id/textViewLikesLabel"
            app:layout_constraintTop_toTopOf="@+id/textViewLikesLabel"
            app:layout_constraintBaseline_toBaselineOf="@id/textViewLikesLabel"/>

        <TextView
            android:id="@+id/textViewDislikesCount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/default_count"
            android:layout_margin="16dp"
            app:layout_constraintStart_toEndOf="@+id/textViewDislikesLabel"
            app:layout_constraintTop_toBottomOf="@id/textViewLikesCount"
            app:layout_constraintBaseline_toBaselineOf="@id/textViewDislikesLabel" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>