<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    android:padding="8dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/imageViewBigPoster"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:adjustViewBounds="true"
            android:contentDescription="@string/movie_poster"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:srcCompat="@tools:sample/avatars" />

        <TextView
            android:id="@+id/textViewLabelTitle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/title"
            android:textColor="@color/white"
            app:layout_constraintBaseline_toBaselineOf="@id/textViewTitle"
            app:layout_constraintEnd_toStartOf="@+id/guidelineCenter"
            app:layout_constraintHorizontal_bias="0.496"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageViewAddToFavourite" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guidelineCenter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_begin="205dp"
            app:layout_constraintGuide_percent="0.5" />

        <TextView
            android:id="@+id/textViewTitle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/title"
            android:textColor="@color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/guidelineCenter"
            app:layout_constraintTop_toBottomOf="@+id/imageViewAddToFavourite" />

        <!--        <TextView-->
        <!--            android:id="@+id/textViewOriginalTitle"-->
        <!--            android:layout_width="0dp"-->
        <!--            android:layout_height="wrap_content"-->
        <!--            android:text="@string/original_title"-->
        <!--            android:textColor="@color/white"-->
        <!--            app:layout_constraintEnd_toEndOf="parent"-->
        <!--            app:layout_constraintStart_toStartOf="@+id/guidelineCenter"-->
        <!--            app:layout_constraintTop_toBottomOf="@+id/textViewTitle" />-->

        <!--        <TextView-->
        <!--            android:id="@+id/textViewLabelOriginalTitle"-->
        <!--            android:layout_width="0dp"-->
        <!--            android:layout_height="wrap_content"-->
        <!--            android:text="@string/label_original_title"-->
        <!--            android:textColor="@color/white"-->
        <!--            app:layout_constraintBaseline_toBaselineOf="@+id/textViewOriginalTitle"-->
        <!--            app:layout_constraintEnd_toStartOf="@+id/guidelineCenter"-->
        <!--            app:layout_constraintStart_toStartOf="parent"-->
        <!--            app:layout_constraintTop_toBottomOf="@+id/textViewLabelTitle" />-->

        <TextView
            android:id="@+id/textViewRatingStats"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/rating"
            android:textColor="@color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/guidelineCenter"
            app:layout_constraintTop_toBottomOf="@+id/textViewTitle" />

        <TextView
            android:id="@+id/textViewLabelRating"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/rating_label"
            android:textColor="@color/white"
            app:layout_constraintBaseline_toBaselineOf="@id/textViewRatingStats"
            app:layout_constraintEnd_toStartOf="@+id/guidelineCenter"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textViewLabelTitle" />

        <TextView
            android:id="@+id/textViewLabelReleaseDate"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/label_release_date"
            android:textColor="@color/white"
            app:layout_constraintBaseline_toBaselineOf="@id/textViewReleaseDate"
            app:layout_constraintEnd_toStartOf="@+id/guidelineCenter"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textViewLabelRating" />

        <TextView
            android:id="@+id/textViewReleaseDate"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/default_release_date"
            android:textColor="@color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/guidelineCenter"
            app:layout_constraintTop_toBottomOf="@+id/textViewRatingStats" />

        <TextView
            android:id="@+id/textViewLabelDescription"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:text="@string/label_description"
            android:textColor="@color/white"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textViewLabelReleaseDate" />

        <TextView
            android:id="@+id/textViewOverview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:text="@string/default_description"
            android:textColor="@color/white"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textViewLabelDescription" />

        <ImageView
            android:id="@+id/imageViewAddToFavourite"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:contentDescription="@string/add_to_fav_desc"
            android:src="@drawable/favourite_add_to"
            app:layout_constraintBottom_toBottomOf="@+id/imageViewBigPoster"
            app:layout_constraintEnd_toEndOf="@+id/imageViewBigPoster"
            app:layout_constraintTop_toBottomOf="@+id/imageViewBigPoster"
            app:layout_constraintVertical_bias="1.0" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerViewTrailers"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:nestedScrollingEnabled="false"
            app:layout_constraintBottom_toTopOf="@id/buttonOpenReviews"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textViewOverview"
            tools:listitem="@layout/trailer_item" />

        <Button
            android:id="@+id/buttonOpenReviews"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/open_reviews"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/recyclerViewTrailers" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>